...
                                        <rect key="frame" x="107.66666666666667" y="387" width="160" height="160"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                            <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="議程" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RlQ-Rq-fLk">
                                                    <rect key="frame" x="0.0" y="128" width="160" height="20"/>
                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                                    <color key="textColor" red="0.0" green="0.81568627449999997" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b9L-bH-oAB">
...
                            <constraint firstItem="otS-0P-sQJ" firstAttribute="trailing" secondItem="fLx-Uc-sz6" secondAttribute="trailing" id="ize-2x-Pib"/>
                            <constraint firstItem="otS-0P-sQJ" firstAttribute="bottom" secondItem="fLx-Uc-sz6" secondAttribute="bottom" id="oZS-bU-Qf2"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="fLx-Uc-sz6"/>
                    </view>
                    <navigationItem key="navigationItem" title="最新消息" id="Rmw-di-Pwg">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="Close" id="njX-oP-Lm2">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="dismissAction:" destination="r0p-Xz-pNY" id="lKR-zz-3e7"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            <constraint firstItem="c2A-iD-GwI" firstAttribute="top" secondItem="fYQ-Dp-jjs" secondAttribute="bottom" constant="16" id="pdK-U9-thD"/>
                            <constraint firstItem="5Yl-l8-0xi" firstAttribute="top" secondItem="fYQ-Dp-jjs" secondAttribute="bottom" constant="16" id="saP-Vm-sAH"/>
                            <constraint firstItem="5Yl-l8-0xi" firstAttribute="trailing" secondItem="bi3-Iy-PLE" secondAttribute="trailing" id="vLd-gm-GLb"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="bi3-Iy-PLE"/>
                    </view>
                    <navigationItem key="navigationItem" title="社群" id="0UL-GG-vnk">
                        <barButtonItem key="backBarButtonItem" title=" " id="yRQ-BE-H3u"/>
                        <barButtonItem key="rightBarButtonItem" title="Item" image="Close" id="2cg-HK-Va0">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="dismissAction:" destination="V1C-c3-l0g" id="jG2-6R-s0t"/>
                            </connections>
...
                            <constraint firstItem="ORs-tV-3C8" firstAttribute="leading" secondItem="Rfb-Mi-uF1" secondAttribute="leading" id="5IG-yy-48L"/>
                            <constraint firstItem="ORs-tV-3C8" firstAttribute="top" secondItem="Rfb-Mi-uF1" secondAttribute="top" id="G0R-g5-vtQ"/>
                            <constraint firstItem="ORs-tV-3C8" firstAttribute="trailing" secondItem="Rfb-Mi-uF1" secondAttribute="trailing" id="euk-jf-M5G"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Rfb-Mi-uF1"/>
                    </view>
                    <navigationItem key="navigationItem" title="講者" id="3bc-hp-ueb">
                        <barButtonItem key="backBarButtonItem" title=" " id="rPS-ge-qQq"/>
                        <barButtonItem key="rightBarButtonItem" title="Item" image="Close" id="CTV-vm-DTj">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="dismissAction:" destination="WeK-O8-Zdx" id="3BI-hT-Pcj"/>
                            </connections>
...
                            <constraint firstItem="ruV-TZ-Nrf" firstAttribute="leading" secondItem="CIh-7Y-u3h" secondAttribute="leading" id="Xtc-MU-Xhb"/>
                            <constraint firstItem="ruV-TZ-Nrf" firstAttribute="trailing" secondItem="CIh-7Y-u3h" secondAttribute="trailing" id="e4v-uz-gEi"/>
                            <constraint firstItem="ruV-TZ-Nrf" firstAttribute="bottom" secondItem="CIh-7Y-u3h" secondAttribute="bottom" id="od2-xw-t6u"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="CIh-7Y-u3h"/>
                    </view>
                    <navigationItem key="navigationItem" title="贊助商" id="SAk-VL-61w">
                        <barButtonItem key="backBarButtonItem" title=" " id="V9r-7a-2sP"/>
                        <barButtonItem key="rightBarButtonItem" title="Item" image="Close" id="VLN-iE-Ai4">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="dismissAction:" destination="V5I-vg-TvL" id="Tc9-wa-gdP"/>
                            </connections>
...
